# reference-audit

./: .gitignore  AGENTS.md  README.md  citations-20260628T112500.bibtex  main.py  position-initial-report.md  pyproject.toml  report.md
.cf-studio/config/: artifacts.toml  core.toml
architecture/: DECOMPOSITION.md  DESIGN.md  PRD.md  SPEC.md
architecture/features/: citation-alignment.md  identification.md  parsing.md
src/reference_audit/: __init__.py  alignmentcheck.py  bookcheck.py  cli.py  config.py  fieldcheck.py  models.py  pipeline.py  report.py  versioning.py
src/reference_audit/cache/: __init__.py  db.py  store.py
src/reference_audit/llm/: __init__.py  client.py  prompts.py  schemas.py
src/reference_audit/matching/: __init__.py  adjudicate.py  features.py  names.py  pool.py  sameobject.py  scoring.py  verdict.py  webcheck.py
src/reference_audit/parsing/: __init__.py  bib.py  identifiers.py  tex.py
src/reference_audit/sources/: __init__.py  arxiv.py  base.py  crossref.py  web.py  (+10 more)
tests/: conftest.py  references.bib  test_abstracts.py  test_adapters_m3.py  test_alignment_models.py  test_alignment_pipeline.py  test_alignment_report.py  test_alignmentcheck.py  test_backfill.py  test_bib.py  test_book_pipeline.py  test_bookcheck.py  test_cache.py  test_citation_contexts.py  test_crossref.py  test_dblp.py  test_documents.py  test_fieldcheck.py  test_google_books.py  test_identifiers.py  test_llm.py  test_pipeline.py  test_pipeline_verdict.py  test_pool.py  test_publisher.py  test_sameobject.py  test_scoring.py  test_tex.py  test_versioning.py  test_web.py
(+5 files in other folders)
