[project]
name = "reference-audit"
version = "0.1.0"
description = "Audit .bib/.tex references: identify the exact artifact, screen for hallucinated references, and produce the best reference."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anyascii>=0.3.3",
    "beautifulsoup4>=4.15.0",
    "bibtexparser>=1.4,<2",
    "constructor-studio",
    "curl-cffi>=0.7",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "openai>=2.44.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "rapidfuzz>=3.14.5",
    "tenacity>=9.1.4",
    "tqdm>=4.67",
    "typer>=0.26.8",
]

[project.scripts]
reference-audit = "reference_audit.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reference_audit"]

[tool.uv.sources]
constructor-studio = { git = "https://github.com/constructorfabric/studio.git" }

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "respx>=0.23.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.reference-audit]
# placeholder section; runtime config lives in reference_audit.config.AuditConfig
